--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^1.1.0",
+    "@discordjs/builders": "^1.4.0",
     "ascii-table": "^0.0.9",
     "colors": "^1.4.0",
-    "discord.js": "^14.2.0",
+    "discord-logs": "^2.2.1",
+    "discord.js": "^14.7.0",
     "fs": "^0.0.1-security",
-    "mongoose": "^6.6.5",
+    "mongoose": "^6.7.4",
     "ms": "^2.1.3",
     "nodemon": "^2.0.20"
   }
