--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord-logs": "^2.2.1",
     "discord.js": "^14.7.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "mongoose": "^6.7.4",
     "ms": "^2.1.3",
